feat: improve job location workflow
